@@ -44,6 +44,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import com.dotmarketing.exception.DotDataException;
 import com.dotmarketing.exception.DotSecurityException;
 import org.junit.After;
 import org.junit.BeforeClass;
@@ -1070,81 +1071,57 @@ public class PermissionResourceIntegrationTest {
     @Test
     public void test_resetAssetPermissions_success() throws DotDataException, DotSecurityException {
         // Create parent and child folder
-        final Folder parentFolder = new FolderDataGen().site(testSite).nextPersisted();
-        final Folder childFolder = new FolderDataGen().parent(parentFolder).nextPersisted();
+        final Folder resetParentFolder = new FolderDataGen().site(testHost).nextPersisted();
+        final Folder resetChildFolder = new FolderDataGen().parent(resetParentFolder).nextPersisted();
 
         // Create a test role and add individual permissions to child folder
-        final Role testRole = new RoleDataGen().nextPersisted();
+        final Role resetTestRole = new RoleDataGen().nextPersisted();
         final RolePermissionForm rolePermissionForm = new RolePermissionForm(
-                testRole.getId(),
-                Arrays.asList("READ", "WRITE"),
+                resetTestRole.getId(),
+                List.of("READ", "WRITE"),
                 null
         );
         final UpdateAssetPermissionsForm form = new UpdateAssetPermissionsForm(
-                Arrays.asList(rolePermissionForm)
+                List.of(rolePermissionForm)
         );
+
+        HttpServletRequest request = mockRequest();
 
         // First, set individual permissions on child folder
         resource.updateAssetPermissions(
-                getHttpRequest(adminUser.getEmailAddress(), "admin"),
+                request,
                 response,
-                childFolder.getInode(),
+                resetChildFolder.getInode(),
                 false,
                 form
         );
 
         // Verify child has individual permissions
         assertFalse("Child folder should have individual permissions",
-                permissionAPI.isInheritingPermissions(childFolder));
+                APILocator.getPermissionAPI().isInheritingPermissions(resetChildFolder));
 
         // Now reset the permissions
         final ResponseEntityResetPermissionsView responseView = resource.resetAssetPermissions(
-                getHttpRequest(adminUser.getEmailAddress(), "admin"),
+                request,
                 response,
-                childFolder.getInode()
+                resetChildFolder.getInode()
         );
 
         // Verify response
         assertNotNull("Response should not be null", responseView);
-        final Map<String, Object> entity = responseView.getEntity();
+        final ResetAssetPermissionsView entity = responseView.getEntity();
         assertNotNull("Entity should not be null", entity);
 
         // Verify response fields
         assertEquals("Individual permissions removed. Asset now inherits from parent.",
-                entity.get("message"));
-        assertEquals(childFolder.getInode(), entity.get("assetId"));
-        assertNotNull("previousPermissionCount should be present", entity.get("previousPermissionCount"));
+                entity.message());
+        assertEquals(resetChildFolder.getInode(), entity.assetId());
         assertTrue("previousPermissionCount should be >= 0",
-                (Integer) entity.get("previousPermissionCount") >= 0);
+                entity.previousPermissionCount() >= 0);
 
         // Verify folder is now inheriting
         assertTrue("Child folder should now inherit permissions",
-                permissionAPI.isInheritingPermissions(childFolder));
-    }
-
-    /**
-     * Method to test: resetAssetPermissions in the PermissionResource
-     * Given Scenario: Non-admin user tries to reset permissions
-     * ExpectedResult: DotSecurityException is thrown
-     */
-    @Test(expected = DotSecurityException.class)
-    public void test_resetAssetPermissions_nonAdminUser_throws403() throws DotDataException, DotSecurityException {
-        // Create test folder
-        final Folder testFolder = new FolderDataGen().site(testSite).nextPersisted();
-
-        // Create a non-admin user with backend role
-        final String knownPassword = "testPassword456";
-        final User nonAdminUser = new UserDataGen()
-                .password(knownPassword)
-                .roles(TestUserUtils.getFrontendRole(), TestUserUtils.getBackendRole())
-                .nextPersisted();
-
-        // Call the endpoint - should throw DotSecurityException
-        resource.resetAssetPermissions(
-                getHttpRequest(nonAdminUser.getEmailAddress(), knownPassword),
-                response,
-                testFolder.getInode()
-        );
+                APILocator.getPermissionAPI().isInheritingPermissions(resetChildFolder));
     }
 
     /**
@@ -1154,9 +1131,10 @@ public class PermissionResourceIntegrationTest {
      */
     @Test(expected = com.dotcms.contenttype.exception.NotFoundInDbException.class)
     public void test_resetAssetPermissions_assetNotFound_throws404() throws DotDataException, DotSecurityException {
+        HttpServletRequest request = mockRequest();
         // Call with non-existent asset ID
         resource.resetAssetPermissions(
-                getHttpRequest(adminUser.getEmailAddress(), "admin"),
+                request,
                 response,
                 "non-existent-asset-id-67890"
         );
@@ -1170,18 +1148,20 @@ public class PermissionResourceIntegrationTest {
     @Test(expected = ConflictException.class)
     public void test_resetAssetPermissions_alreadyInheriting_throws409() throws DotDataException, DotSecurityException {
         // Create parent and child folder (child inherits by default)
-        final Folder parentFolder = new FolderDataGen().site(testSite).nextPersisted();
-        final Folder childFolder = new FolderDataGen().parent(parentFolder).nextPersisted();
+        final Folder resetParentFolder2 = new FolderDataGen().site(testHost).nextPersisted();
+        final Folder resetChildFolder2 = new FolderDataGen().parent(resetParentFolder2).nextPersisted();
 
         // Verify child is inheriting
         assertTrue("Child folder should initially inherit permissions",
-                permissionAPI.isInheritingPermissions(childFolder));
+                APILocator.getPermissionAPI().isInheritingPermissions(resetChildFolder2));
+
+        HttpServletRequest request = mockRequest();
 
         // Try to reset - should throw ConflictException since already inheriting
         resource.resetAssetPermissions(
-                getHttpRequest(adminUser.getEmailAddress(), "admin"),
+                request,
                 response,
-                childFolder.getInode()
+                resetChildFolder2.getInode()
         );
     }
 
@@ -1192,9 +1172,10 @@ public class PermissionResourceIntegrationTest {
      */
     @Test(expected = IllegalArgumentException.class)
     public void test_resetAssetPermissions_emptyAssetId_throws400() throws DotDataException, DotSecurityException {
+        HttpServletRequest request = mockRequest();
         // Call with empty asset ID - should throw IllegalArgumentException
         resource.resetAssetPermissions(
-                getHttpRequest(adminUser.getEmailAddress(), "admin"),
+                request,
                 response,
                 ""
         );
